--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,14 +8,17 @@ body {
     opacity: 0.9;
     text-align: center;
     width: 100%;
+    height: 2200px;
 }
 header {
     display: flex;
     position: fixed;
-    z-index: 1;
+    z-index: 9;
     width: 100%;
     height: 69px;
     border-bottom: 1px solid seashell;
+    background-color: black;
+    text-decoration: underline;
 }
 .logo {
     display: flex;
@@ -43,16 +46,31 @@ span {
 
 /* --------end of header--------*/
 main {
+    padding-top: 69px;
     display: flex;
     justify-content: center;
     width: 100%;
     height: 100%
 }
+/*----------Controlls the Our Mission section--------*/
 .top-section {
-    background-image: url("/Users/trevorwoodard/Desktop/TeaCozy/resources/pics/img-mission-background.jpg");
-    display: flex;
+    background-image: url("/Users/trevorwoodard/Desktop/Tea-Cozy/resources/pics/img-mission-background.jpg");
     justify-content: center;
     align-items: center;
     width: 1200px;
-    height: 600px;
+    height: 700px;
+    text-align: center;
 }
+.mission {
+    padding-top: 250px;
+    align-items: center;
+
+}
+.mission-content {
+    background: black;
+}
+/*----End of Our Mission Section----*/
+/*----Start of section Tea of the Month---*/
+
+
+/*----end of section---*/
