--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -43,6 +43,9 @@ a {
 span {
     padding: 0px 10px;
 }
+h4 {
+    margin: 10px;
+}
 
 /* --------end of header--------*/
 .top-section-content {
@@ -53,6 +56,7 @@ span {
     height: 100%;
 }
 /*----------Controlls the Our Mission section--------*/
+
 .top-section {
     background-image: url("/Users/trevorwoodard/Desktop/Tea-Cozy/resources/pics/img-mission-background.jpg");
     justify-content: center;
@@ -64,7 +68,6 @@ span {
 .mission {
     padding-top: 250px;
     align-items: center;
-
 }
 .mission-content {
     background: black;
@@ -72,17 +75,57 @@ span {
 /*----End of Our Mission Section----*/
 /*----Start of section Tea of the Month---*/
 
+.tea-content h4 {
+    margin-bottom: 20px;
+}
 /*----end of section---*/
 /*----Start of third section----*/
+
 .third-section {
     display: flex;
     width: 100%;
     height: 220px;
     justify-content: center;
- 
 }
 .third-content img {
     height: 200px;
     margin: 0px 20px;
 }
 /*----End of Third Section----*/
+/*----Start of Fourth section----*/
+
+.fourth-section {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 220px;
+    padding-top: 40px;
+}
+.fourth-content img {
+    height: 200px;
+    margin: 0px 20px;
+}
+/*----End of Fourth Section-----*/
+/*----Start of locations section----*/
+.locations-section {
+    width: 1200px;
+    height: 575px;
+    margin-top: 100px;
+    margin-left: 80px;
+    background-image: url("/Users/trevorwoodard/Desktop/Tea-Cozy/resources/pics/img-locations-background.jpg");
+}
+.loctions-content {
+    height: 575px;
+    margin-left: 30px;
+}
+.locations-title {
+    width: 1200px;
+    height: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.locations-title h3 {
+    margin: 0px;
+}
+/*----End of Locations Section-----*/
