--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -128,4 +128,20 @@ h4 {
 .locations-title h3 {
     margin: 0px;
 }
+.column-section {
+   display: flex;
+   width: 100%;
+   height: 300px; 
+   margin-top: 15px;
+   justify-content: center;
+}
+.column {
+    display: flex;
+    justify-content: space-around;
+    width: 300px;
+    height: 300px;
+    flex-direction: column;
+    background-color: black;
+    margin: 0px 20px;
+}
 /*----End of Locations Section-----*/
