--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,7 @@ body {
     opacity: 0.9;
     text-align: center;
     width: 100%;
-    height: 2200px;
+    height: 2450px;
 }
 header {
     display: flex;
@@ -145,3 +145,19 @@ h4 {
     margin: 0px 20px;
 }
 /*----End of Locations Section-----*/
+/*----Start of footer-----*/
+footer {
+    width: 100%;
+    height: 200px;
+}
+.footer-content {
+    width: 100%;
+    height: 200px;
+}
+.copyright {
+    display: flex;
+    text-align: left;
+    height: 100px;
+    align-items: flex-end;
+}
+/*----end of footer-------*/
