--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -73,7 +73,7 @@ h4 {
     background: black;
 }
 /*----End of Our Mission Section----*/
-/*----Start of section Tea of the Month---*/
+/*----Start of second section Tea of the Month---*/
 
 .tea-content h4 {
     margin-bottom: 20px;
@@ -107,7 +107,7 @@ h4 {
 }
 /*----End of Fourth Section-----*/
 /*----Start of locations section----*/
-.locations-section {
+#locations-section {
     width: 1200px;
     height: 575px;
     margin-top: 100px;
